--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
         "symfony/form": "^6.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
-    }
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7",
+        "slevomat/coding-standard": "^8.3"
+    },
     "autoload": {
         "psr-4": {
             "Gamesites\\Payment\\": "src/"
@@ -18,5 +20,11 @@
             "name": "Adexion"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "config": {
+        "bin-dir": "bin",
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
+    }
 }
